# zotero-kokoro-server

./: .gitignore  README.md  pyproject.toml
src/zotero_kokoro_server/: __init__.py  cli.py  engine.py  server.py
