[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.uv]
python-version = "3.11"

[project]
name = "zotero-kokoro-server"
version = "0.1.0"
description = "Local OpenAI-compatible Kokoro TTS server with browser UI, designed for Zotero Read Aloud"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
keywords = ["tts", "text-to-speech", "kokoro", "zotero", "read-aloud", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "kokoro>=0.9.4",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/zotero-kokoro-server"
Repository = "https://github.com/yourusername/zotero-kokoro-server"
Issues = "https://github.com/yourusername/zotero-kokoro-server/issues"

[project.scripts]
zotero-kokoro-server = "zotero_kokoro_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_kokoro_server"]
